--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,10 @@
 <div>hi</div>
+<h5>a new noval </h5>
+<h6> actualy being a human is not that easy speaking about me i took 
+    the responsebility sinse i was 10 , yes i am dead seriouse being a human 
+    and especialy the young sibling for all your brothers and sisters is not that easy 
+    sometimes i feel guilty not doing enough for them , thinking about there futeur , knowing 
+    thet they know nothing about the real world is very tough , it is not easy , thinking instead of 
+    five or six peopel can literaly burn your head , and kill your soul by killing every nurn in your head 
+    yes it is diffecult 
+</h6>
